--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         <header class="d-flex  align-items-center justify-content-between justify-content-lg-around py-3 ">
           <div class=" w-auto logo" >
             <a href="/index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center justify-content-evenly">
-              <img  src="/images/fcc logo high res.png" alt="FCC" width="60" height="60">
+              <img  src="images/fcc logo high res.png" alt="FCC" width="60" height="60">
               <h1 class="logotext pt-3 ps-2 fw-bold navbar-brand">FCC</h1>
             </a>
           </div>
           
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
-            <li><a href="/index.html" class="nav-link fs-6 head-navlink px-3 fw-light">Horizon</a></li>
-            <li><a href="/pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">FinSpace</a></li>
-            <li><a href="/pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Sponsors</a></li>
-            <li><a href="/pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Resources</a></li>
-            <li><a href="/pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Contact</a></li>
+            <li><a href="index.html" class="nav-link fs-6 head-navlink px-3 fw-light">Horizon</a></li>
+            <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">FinSpace</a></li>
+            <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Sponsors</a></li>
+            <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Resources</a></li>
+            <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
     
         <div class="col-md-3 login d-none d-lg-flex" >
@@ -71,11 +71,11 @@
               <button type="button" class="btn-close bg-light " data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
             </div>
             <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
-                  <a href="/index.html" class="toggle-links ">Horizon</a>
-                  <a href="/pages/Finspace.html" class="toggle-links ">FinSpace</a>
-                  <a href="/pages/Finspace.html" class="toggle-links ">Sponsors</a>
-                  <a href="/pages/Finspace.html" class="toggle-links ">Resources</a>
-                  <a href="/pages/Finspace.html" class="toggle-links ">Contact</a>
+                  <a href="index.html" class="toggle-links ">Horizon</a>
+                  <a href="pages/Finspace.html" class="toggle-links ">FinSpace</a>
+                  <a href="pages/Finspace.html" class="toggle-links ">Sponsors</a>
+                  <a href="pages/Finspace.html" class="toggle-links ">Resources</a>
+                  <a href="pages/Finspace.html" class="toggle-links ">Contact</a>
                   <div class="col-md-3 login" >
                     <button type="button" class="btn btn1 fs-6 mx-2 fw-bold">Sign In</button>
                     <button type="button" class="btn btn2 fs-6 mx-2 fw-bold">Sign Up</button>
@@ -84,10 +84,10 @@
             </div>
         </header>
       </div>
-    <img class="glow-block" src="/images/glowblocksmall.png" alt="">
-    <img class="svgblur1" src="/images/rupeeblur.svg" alt="" height="50" width="50" title="svg">
-    <img class="svgblur2" src="/images/rupeeblur.svg" alt="" height="70" width="70" title="svg">
-    <img class="svgblur3" src="/images/rupeeblur.svg" alt="" height="40" width="40" title="svg">
+    <img class="glow-block" src="images/glowblocksmall.png" alt="">
+    <img class="svgblur1" src="images/rupeeblur.svg" alt="" height="50" width="50" title="svg">
+    <img class="svgblur2" src="images/rupeeblur.svg" alt="" height="70" width="70" title="svg">
+    <img class="svgblur3" src="images/rupeeblur.svg" alt="" height="40" width="40" title="svg">
     <!-- <img class="rightboxblur" src="/images/glowblocksmall.png" alt="" height="400" width="400"> -->
     <div class="body-bg-grad"></div>
     <!-- <img class="rightboxblur" src="/images/Group 1blockright.svg" alt="" width="300" height="300"> -->
@@ -112,14 +112,14 @@
                   <div class="horizon-card d-flex flex-column align-items-start">
                       <div class="heading ">
                           <div>FCC, IIT Hyderabad</div>
-                          <img class="horizon-logo" src="/images/Group 3.svg" alt="" width="70" height="70">
+                          <img class="horizon-logo" src="images/Group 3.svg" alt="" width="70" height="70">
                         </div>
                       <div class="horizon-title">
                           <h1>Horizon</h1>
-                          <img src="/images/wifi.svg" alt="" width="50" height="50">
+                          <img src="images/wifi.svg" alt="" width="50" height="50">
                         </div>
                       <div class="timer">
-                          <img src="/images/timer.png" alt="" width="100%" height="90%">
+                          <img src="images/timer.png" alt="" width="100%" height="90%">
                       </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
   <!-- QUOTE PAGE -->
   <div class="quote quote-span col-lg-6 px-4 py-5">
       <div class="arrow">
-          <img class="arrowsvg" src="/images/Vector.svg" alt="" height="90%" width="90%">
+          <img class="arrowsvg" src="images/Vector.svg" alt="" height="90%" width="90%">
       </div>
     <h3 class=" mission fs-2 quote-span" >Our mission</h3>
     <div class="quote-text col-lg-6  ">
