--- a/index.html
+++ b/index.html
@@ -116,9 +116,17 @@
                           <h1>Horizon</h1>
                           <img src="images/wifi.svg" alt="" width="50" height="50">
                         </div>
-                      <div class="timer">
-                          <img src="images/timer.png" alt="" width="100%" height="90%">
+                      <div class="timer w-100">
+                          <!-- <img src="images/timer.png" alt="" width="100%" height="90%"> -->
+                          <div class="countdown-container ">
+                            <div class="days fs-3"><span id="days"> 00</span> <br><span>days</span></div>
+                            <div class="hours fs-3"><span id="hours"> 00</span> <br><span>hrs</span></div>
+                            <div class="minutes fs-3"><span id="minutes"> 00</span><br> <span>min</span></div>
+                            <div class="seconds fs-3"><span id="seconds"> 00</span> <br><span>sec</span></div>
+                          </div>
+
                       </div>
+
                   </div>
                 </div>
             </div>
@@ -152,9 +160,7 @@
     </div>
     
 
-  <!-- <div class="whoarewe">
-    <img src="/FCC-Web/images/Group 19.svg" alt="" width="100%" height="100%">
-  </div> -->
+
   
 
 
