--- a/index.html
+++ b/index.html
@@ -171,13 +171,37 @@
   <div class="what-we-do">
     <div class="bg-grad-what"></div>
     <div class="what-heading ">
-      What Do <br> We Do ?
+      What Do <br> We Do?
     </div>
-    <div class="what-cards d-flex justify-content-between h-auto">
-      <div class="what-card" id="card1"></div>
-      <div class="what-card" id="card2"></div>
-      <div class="what-card" id="card3"></div>
-    </div>
+    <div class="what-cards d-flex flex-sm-column flex-md-row justify-content-between  ">
+      <div class="what-card h-100" id="card1">
+        <div class="what-subcard" id="subcard1">
+          <div class="subcard-top h-50 w-100">
+            <p>View Sessions</p>
+            <img src="/images/Frame.svg" width="20%" height="20%" alt="">
+          </div>
+          <div class="subcard-bottom h-50 w-100"><p>Product Management</p></div>
+          </div>
+      </div>
+      <div class="what-card h-100" id="card2"><div class="what-subcard" id="subcard2">
+          <div class="subcard-top h-50 w-100">
+            <p>View Sessions</p>
+            <img src="/images/Frame.svg" width="20%" height="20%" alt="">
+          </div>
+          <div class="subcard-bottom h-50 w-100"><p>Finance</p></div>
+        </div>
+      </div>
+      <div class="what-card h-100" id="card3"><div class="what-subcard" id="subcard3">
+        <div class="subcard-top h-50 w-100">
+          <p>View Sessions</p>
+          <img src="/images/Frame.svg" width="20%" height="20%" alt="">
+        </div>
+        <div class="subcard-bottom h-50 w-100">
+          <p>Consulting</p>
+        </div>
+        </div>
+      </div>
+      </div>
   </div>
 
 
