Font and card changes

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <div class="row flex-lg-row g-5 subcard" >
                 <div class="col-lg-6 titlecard py-5">
                     <div class="titles">
-                      <h1 class="display-5 fw-bold text-body-light lh-1 mb-3 fcc-main-heading">Finance and Consulting Club</h1>
-                      <h1 class="display-5 fw-light text-body-light lh-1 mb-3 iith-main-heading">IIT Hyderabad</h1>
+                      <p class="display-5 fw-bold text-body-light lh-1 mb-3 fcc-main-heading">Finance and Consulting Club</p>
+                      <p class="display-5 fw-light text-body-light lh-1 mb-3 iith-main-heading">IIT Hyderabad</p>
                   </div>
 
                   <!-- SEARCH BAR -->
@@ -171,35 +171,49 @@
   <div class="what-we-do">
     <div class="bg-grad-what"></div>
     <div class="what-heading ">
-      What Do <br> We Do?
+      <p>
+        What Do We Do?
+      </p>
     </div>
-    <div class="what-cards d-flex flex-sm-column flex-md-row justify-content-between  ">
-      <div class="what-card h-100" id="card1">
-        <div class="what-subcard" id="subcard1">
-          <div class="subcard-top h-50 w-100">
-            <p>View Sessions</p>
-            <img src="/images/Frame.svg" width="20%" height="20%" alt="">
+    <div class="what-cards">
+      <div class="what-card" id="card1">
+        <a href="" class="what-subcard-link">
+          <div class="what-subcard" id="subcard1">
+            <div class="subcard-top h-50 w-100">
+              <p>View Sessions</p>
+              <img src="/images/Frame.svg" width="60%" height="60%" alt="">
+            </div>
+            <div class="subcard-bottom h-50 w-100">
+              <p>Product Management</p>
+            </div>
           </div>
-          <div class="subcard-bottom h-50 w-100"><p>Product Management</p></div>
-          </div>
+        </a>
       </div>
-      <div class="what-card h-100" id="card2"><div class="what-subcard" id="subcard2">
-          <div class="subcard-top h-50 w-100">
-            <p>View Sessions</p>
-            <img src="/images/Frame.svg" width="20%" height="20%" alt="">
+      <div class="what-card" id="card2">
+        <a href="" class="what-subcard-link">
+          <div class="what-subcard" id="subcard2">
+            <div class="subcard-top h-50 w-100">
+              <p>View Sessions</p>
+              <img src="/images/Frame.svg" width="60%" height="60%" alt="">
+            </div>
+            <div class="subcard-bottom h-50 w-100">
+              <p>Finance</p>
+            </div>
           </div>
-          <div class="subcard-bottom h-50 w-100"><p>Finance</p></div>
-        </div>
+        </a>
       </div>
-      <div class="what-card h-100" id="card3"><div class="what-subcard" id="subcard3">
-        <div class="subcard-top h-50 w-100">
-          <p>View Sessions</p>
-          <img src="/images/Frame.svg" width="20%" height="20%" alt="">
-        </div>
-        <div class="subcard-bottom h-50 w-100">
-          <p>Consulting</p>
-        </div>
-        </div>
+      <div class="what-card" id="card3">
+        <a href="" class="what-subcard-link">
+          <div class="what-subcard" id="subcard3">
+            <div class="subcard-top h-50 w-100">
+              <p>View Sessions</p>
+              <img src="/images/Frame.svg" width="60%" height="60%" alt="">
+            </div>
+            <div class="subcard-bottom h-50 w-100">
+              <p>Consulting</p>
+            </div>
+          </div>
+        </a>
       </div>
       </div>
   </div>
