--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="what-subcard" id="subcard1">
             <div class="subcard-top h-50 w-100">
               <p>View Sessions</p>
-              <img src="/images/Frame.svg" width="60%" height="60%" alt="">
+              <img src="images/Frame.svg" width="60%" height="60%" alt="">
             </div>
             <div class="subcard-bottom h-50 w-100">
               <p>Product Management</p>
