--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="what-subcard" id="subcard2">
             <div class="subcard-top h-50 w-100">
               <p>View Sessions</p>
-              <img src="/images/Frame.svg" width="60%" height="60%" alt="">
+              <img src="images/Frame.svg" width="60%" height="60%" alt="">
             </div>
             <div class="subcard-bottom h-50 w-100">
               <p>Finance</p>
@@ -207,7 +207,7 @@
           <div class="what-subcard" id="subcard3">
             <div class="subcard-top h-50 w-100">
               <p>View Sessions</p>
-              <img src="/images/Frame.svg" width="60%" height="60%" alt="">
+              <img src="images/Frame.svg" width="60%" height="60%" alt="">
             </div>
             <div class="subcard-bottom h-50 w-100">
               <p>Consulting</p>
