--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
             <li><a href="index.html" class="nav-link fs-6 head-navlink px-3 fw-light">Horizon</a></li>
-            <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">FinSpace</a></li>
             <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Sponsors</a></li>
+            <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Team</a></li>
             <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Resources</a></li>
             <li><a href="pages/Finspace.html" class="nav-link fs-6 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
@@ -73,8 +73,8 @@
             </div>
             <div class=" flex flex-col justify-evenly h-100 d-lg-none links w-auto">
                   <a href="index.html" class="toggle-links ">Horizon</a>
-                  <a href="pages/Finspace.html" class="toggle-links ">FinSpace</a>
                   <a href="pages/Finspace.html" class="toggle-links ">Sponsors</a>
+                  <a href="pages/Finspace.html" class="toggle-links ">Team</a>
                   <a href="pages/Finspace.html" class="toggle-links ">Resources</a>
                   <a href="pages/Finspace.html" class="toggle-links ">Contact</a>
                   <!-- <div class="col-md-3 login" >
