--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 </head>
 <body>
     <!-- HEADER and NAVBAR -->
-    <div class="container-fluid header d-flex ">
+    <div class="container-fluid header d-flex py-3">
         <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-5">
           <div class=" w-auto logo" >
             <a href="/index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center justify-content-evenly">
-              <img  src="images/fcc logo high res.png" alt="FCC" width="60" height="60">
-              <h1 class="logotext pt-3 ps-2 fw-bold navbar-brand">FCC</h1>
+              <img  src="images/fcc logo high res.png" alt="FCC" width="70" height="70">
+              <!-- <h1 class="logotext pt-3 ps-2 fw-bold navbar-brand">FCC</h1> -->
             </a>
           </div>
           
