--- a/index.html
+++ b/index.html
@@ -92,16 +92,8 @@
                     <div class="titles">
                       <p class="display-5 fw-bold text-body-light lh-1 mb-3 fcc-main-heading">Finance and Consulting Club</p>
                       <p class="display-5 fw-light text-body-light lh-1 mb-3 iith-main-heading">IIT Hyderabad</p>
-                  </div>
+                </div>
 
-                  <!-- SEARCH BAR -->
-
-                  <!-- <form action="\search" method="get" class="search px-3 py-1 ">
-                      <input type="text"  name="searchtext" placeholder="Search for blogs" id="searchbar"> -->
-                      <!-- <button type="submit" id="searchbutton">
-                          <img  src="/images/search icon.svg" alt="" width="60%" height="80%">
-                      </button> -->
-                  <!-- </form> -->
 
                 </div>
                 <div class="col-10 col-sm-8 col-lg-6 cardbox py-4">
@@ -207,6 +199,65 @@
         </a>
       </div>
       </div>
+
+
+      <!-- FOOTER -->
+      <div class="container">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top ">
+          <div class="col mb-3">
+            <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+              <img src="images/Group 31.svg" width="100%" height="100%" alt="">
+            </a>
+            <p class="">© 2024 Copyright: FCC IIT Hyderabad</p>
+          </div>
+          <div class="col mb-3">
+            <h5>About Us</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">FCC Leadership</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Blogs</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Gallery</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Contact Us</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
+            </ul>
+          </div>
+      
+          <div class="col mb-3">
+            <h5>Useful Links</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Home</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Horizon</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Sponsors</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Workshops</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
+            </ul>
+          </div>
+      
+          <div class="col mb-3">
+            <h5>Socials</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Instagram</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">LinkedIn</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Medium</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Youtube</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
+            </ul>
+          </div>
+          <div class="col mb-3">
+            <h5>Contact</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">IIT Hyderabad, sangareddy,
+                Telangana, India - 502285</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"><img src="images/messgae 1.svg" alt=""> fcc@gymkhana.iith.ac.in</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
+            </ul>
+          </div>
+        </footer>
+      </div>
+
+
+
   </div>
 
 
