--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
-            <li><a href="index.html" class="nav-link fs-5 head-navlink px-3 fw-light ">Horizon</a></li>
+            <li><a href="index.html" class="nav-link fs-5 head-navlink px-3 fw-light">Horizon</a></li>
             <li><a href="pages/Finspace.html" class="nav-link fs-5 head-navlink px-3 fw-light">Sponsors</a></li>
             <li><a href="pages/Finspace.html" class="nav-link fs-5 head-navlink px-3 fw-light">Team</a></li>
             <li><a href="pages/Finspace.html" class="nav-link fs-5 head-navlink px-3 fw-light">Resources</a></li>
@@ -151,7 +151,7 @@
     
 
   <!-- WHAT DO WE DO SECTION -->
-  <div class="what-we-do">
+  <div class="what-we-do py-4 my-4">
     <div class="bg-grad-what"></div>
     <div class="what-heading ">
       <p>
@@ -199,11 +199,11 @@
         </a>
       </div>
       </div>
-
+    </div>
 
       <!-- FOOTER -->
-      <div class="container">
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top ">
+      <div class="footer container-fluid w-auto h-auto">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 border-top ">
           <div class="col mb-3">
             <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
               <img src="images/Group 31.svg" width="100%" height="100%" alt="">
@@ -245,8 +245,8 @@
           <div class="col mb-3">
             <h5>Contact</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">IIT Hyderabad, sangareddy,
-                Telangana, India - 502285</a></li>
+              <li class="nav-item mb-2" ><p class="nav-link p-0 " style="color: white;">IIT Hyderabad, Sangareddy,
+                Telangana, India - 502285</p></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"><img src="images/messgae 1.svg" alt=""> fcc@gymkhana.iith.ac.in</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
@@ -256,9 +256,6 @@
         </footer>
       </div>
 
-
-
-  </div>
 
 
   
