--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="footer container-fluid w-auto h-auto" id="footer">
         <div class="white-noise1 white1-1"></div>
         <div class="white-noise1 white2-1"></div>
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 border-top ">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 ">
           <div class="col mb-3">
             <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
               <img src="images/Group 31.svg" width="100%" height="100%" alt="">
