--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -87,7 +87,7 @@
     
       <!-- Landing Part Horizon -->
     <div class="px-4 py-5 my-5 text-center">
-        <p class="display-5 text-body-primary iith-heading-hor">FCC IIT-HYDERABAD Presents</p>
+        <p class="display-5 iith-heading-hor">FCC IIT-HYDERABAD Presents</p>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4 hor-heading-hor">HORIZON 24'</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center hor-button">
