--- a/pages/Sponsors.html
+++ b/pages/Sponsors.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../pages-css/sponsors.css">
     
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -85,6 +86,26 @@
     <!-- <img class="rightboxblur" src="/images/Group 1blockright.svg" alt="" width="300" height="300"> -->
     
 
+    <!-- Sponsors Section -->
+    <div class="sponsors h-auto w-100 py-4 my-4">
+      <div class="sponsor-heading">
+        <p>Our Sponsors</p>
+      </div>
+      <div class="container-fluid sponsor-grid d-flex flex-column justify-content-evenly">
+        <div class="row1 d-flex justify-content-evenly flex-wrap my-3">
+          <div class="sponsor-card card-3 "><img src="../images/sponsors/mentoverse.svg" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-1 "><img src="../images/sponsors/finlatics.svg" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-4 "><img src="../images/sponsors/blogadda.svg" width="90%" height="90%" alt=""></div>
+        </div>
+        <div class="row2 d-flex justify-content-evenly flex-wrap my-3">
+          <div class="sponsor-card card-2 "><img src="../images/sponsors/elearnmarkets.svg" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-5 "><img src="../images/sponsors/yes bank.svg" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-6 "><img src="../images/sponsors/product.svg" width="90%" height="90%" alt=""></div>
+        </div>
+      </div>
+    </div>
+
+
       <!-- FOOTER -->
       <div class="footer container-fluid w-auto h-auto" id="footer">
         <div class="white-noise1 white1-1"></div>
@@ -141,10 +162,6 @@
           </div>
         </footer>
       </div>
-
-
-
-
   </body>
 
 </html>
