--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container-fluid header d-flex py-3">
         <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-5">
           <div class=" w-auto logo" >
-            <a href="/index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center justify-content-evenly">
+            <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center justify-content-evenly">
               <img  src="images/fcc logo high res.png" alt="FCC" width="70" height="70">
               <!-- <h1 class="logotext pt-3 ps-2 fw-bold navbar-brand">FCC</h1> -->
             </a>
