--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
     </div>
     
   <!-- WHAT DO WE DO SECTION -->
-  <div class="what-we-do py-4 my-4" id="what-we-do">
+  <div class="what-we-do py-4 my-4 container-fluid" id="what-we-do">
     <div class="bg-grad-what"></div>
     <div class="what-heading ">
       <p>
         What Do We Do?
       </p>
     </div>
-    <div class="what-cards">
+    <div class="what-cards d-flex justify-content-evenly flex-wrap my-3">
       <div class="what-card" id="card1">
         <a href="" class="what-subcard-link">
           <div class="what-subcard" id="subcard1">
