--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -96,6 +96,45 @@
         </div>
       </div>
 
+       <!-- About Event -->
+    <div class="about-section">    
+      <div class="about-section-sub my-3">
+        <div class="white1 white-noise"></div>
+
+        <div class="who-head who-large who">About,<br> the Event</div>
+        <div class="who-head who-small who">
+          <p>About the Event</p>
+        </div>
+        <div class="who-text who">Horizon is the flagship event organized by the FCC, offers an essential forum to interact with distinguished speakers and accomplished professionals in the fields of finance, consulting, and product management
+        </div>
+
+      </div>
+      <div class="about-row d-flex justify-content-evenly flex-wrap my-3">
+        <div class="about-outcard">
+          <div class="about-card about-card-1 ">
+            <div class="about-card-heading">3000+
+          </div>
+          <div class="about-text">Footfall</div>
+        </div>
+        </div>
+        <div class="about-outcard">
+          <div class="about-card about-card-2 ">
+            <div class="about-card-heading">60+
+          </div>
+          <div class="about-text">Games</div>
+        </div>
+        </div>
+        <div class="about-outcard">
+          <div class="about-card about-card-3 "> 
+            <div class="about-card-heading">30+
+          </div>
+          <div class="about-text">Speakers</div>
+        </div>
+        </div>
+      </div>
+    </div>
+    
+
       <!-- FOOTER -->
       <div class="footer container-fluid w-auto h-auto" id="footer">
         <div class="white-noise1 white1-1"></div>
