--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -99,13 +99,12 @@
        <!-- About Event -->
     <div class="about-section">    
       <div class="about-section-sub my-3">
-        <div class="white1 white-noise"></div>
 
-        <div class="who-head who-large who">About,<br> the Event</div>
+        <div class="who-head who-large who w-100">About,<br> the Event</div>
         <div class="who-head who-small who">
           <p>About the Event</p>
         </div>
-        <div class="who-text who">Horizon is the flagship event organized by the FCC, offers an essential forum to interact with distinguished speakers and accomplished professionals in the fields of finance, consulting, and product management
+        <div class="who-text who w-100">Horizon is the flagship event organized by the FCC, offers an essential forum to interact with distinguished speakers and accomplished professionals in the fields of finance, consulting, and product management
         </div>
 
       </div>
@@ -131,6 +130,17 @@
           <div class="about-text">Speakers</div>
         </div>
         </div>
+      </div>
+      <div class="about-section-sub my-3">
+        <div class="who-head who-large who w-100">Our Vision<br> for 2024</div>
+        <div class="who-head who-small who w-100">
+          <p>Our Vision for 2024</p>
+        </div>
+        <div class="who-text who w-100">In 2023-24,  Horizon aims to expand its influence to students community by inviting industry, academia, and government experts to share insights on Finance, Consulting, and Product Management.
+
+          We will introduce new competitions and workshops solidifying its status as the go-to platform for Finance, Consulting, and Product Management enthusiasts.
+        </div>
+
       </div>
     </div>
     
