horizon about changes

--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -108,26 +108,20 @@
         </div>
 
       </div>
-      <div class="about-row d-flex justify-content-evenly flex-wrap my-3">
+      <div class="about-row flex-wrap">
         <div class="about-outcard">
           <div class="about-card about-card-1 ">
-            <div class="about-card-heading">3000+
-          </div>
-          <div class="about-text">Footfall</div>
+            <img src="../images/3000+.svg" width="100%" height="100%" alt="">
         </div>
         </div>
         <div class="about-outcard">
           <div class="about-card about-card-2 ">
-            <div class="about-card-heading">60+
-          </div>
-          <div class="about-text">Games</div>
+            <img src="../images/60+.svg" width="100%" height="100%" alt="">
         </div>
         </div>
         <div class="about-outcard">
           <div class="about-card about-card-3 "> 
-            <div class="about-card-heading">30+
-          </div>
-          <div class="about-text">Speakers</div>
+            <img src="../images/30+.svg" width="100%" height="100%" alt="">
         </div>
         </div>
       </div>
