--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -108,7 +108,7 @@
         </div>
 
       </div>
-      <div class="about-row flex-wrap">
+      <div class="about-row ">
         <div class="about-outcard">
           <div class="about-card about-card-1 ">
             <img src="../images/3000+.svg" width="100%" height="100%" alt="">
