--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -108,7 +108,7 @@
         </div>
 
       </div>
-      <div class="about-row ">
+      <div class="about-row d-flex justify-content-evenly flex-wrap my-3">
         <div class="about-outcard">
           <div class="about-card about-card-1 ">
             <img src="../images/3000+.svg" width="100%" height="100%" alt="">
@@ -143,10 +143,10 @@
       <div class="footer container-fluid w-auto h-auto" id="footer">
         <div class="white-noise1 white1-1"></div>
         <div class="white-noise1 white2-1"></div>
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5">
+        <footer class="row row-cols-1 row-cols-sm-1 row-cols-md-5">
           <div class="col mb-3">
             <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
-              <img src="../images/Group 31.svg" width="100%" height="100%" alt="">
+              <img src="../images/Group 31.svg" width="60%" height="60%" alt="">
             </a>
             <p class="">© 2024 Copyright: FCC IIT Hyderabad</p>
           </div>
