Offcanvas header changes

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <div class="offcanvas-header d-flex justify-content-end bg-transparent d-lg-none">
               <button type="button" class="btn-close bg-light " data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
             </div>
-            <div class=" flex flex-col justify-evenly h-100 d-lg-none links w-auto">
+            <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
                   <a href="pages/Horizon.html" class="toggle-links">Horizon</a>
                   <a href="pages/Sponsors.html" class="toggle-links ">Sponsors</a>
                   <a href="pages/Team.html" class="toggle-links ">Team</a>
-                  <a href="pages/Workshops.html" class="toggle-links ">Resources</a>
+                  <a href="#footer" class="toggle-links ">Resources</a>
                   <a href="#footer" class="toggle-links ">Contact</a>
               </div>
           </div>
