--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -67,8 +67,8 @@
             <div class="offcanvas-header d-flex justify-content-end bg-transparent d-lg-none">
               <button type="button" class="btn-close bg-light " data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
             </div>
-            <div class=" flex flex-col justify-evenly h-100 d-lg-none links w-auto">
-                  <a href="../index.html" class="toggle-links">Horizon</a>
+            <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
+                  <a href="../index.html" class="toggle-links">Home</a>
                   <a href="Sponsors.html" class="toggle-links ">Sponsors</a>
                   <a href="Team.html" class="toggle-links ">Team</a>
                   <a href="../index.html" class="toggle-links ">Resources</a>
