--- a/index.html
+++ b/index.html
@@ -253,7 +253,12 @@
       </div>
 
 
-
+      <script>
+        $(".what-subcard").click(function(){
+            window.open('pages/Horizon.html' )
+            return false;
+        })
+      </script>
 
   </body>
 
