--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -137,6 +137,22 @@
 
       </div>
     </div>
+
+    <div class="engagements my-4 py-4">
+      <div class="engage-heading my-4">
+        <p>Our Engagements!</p>
+      </div>
+      <div class="engage-grid">
+        <div class="engage-grid-card" id="grid-card1"><p>Stocks 101</p></div>
+        <div class="engage-grid-card" id="grid-card2"><p>Scroll to Reveal</p></div>
+        <div class="engage-grid-card" id="grid-card3"><p>Decoding Quant</p></div>
+        <div class="engage-grid-card" id="grid-card4"><p>Industry Projects</p></div>
+        <div class="engage-grid-card" id="grid-card5"><p>Workshops</p></div>
+        <div class="engage-grid-card" id="grid-card6"><p>upto 2X more students placed</p></div>
+        <div class="engage-grid-card" id="grid-card7"><p>Consulting 101</p></div>
+        <div class="engage-grid-card" id="grid-card8"><p>more...</p></div>
+      </div>
+    </div>
     
 
       <!-- FOOTER -->
